FIX | gradient on mobile

--- a/styles/heroSection.css
+++ b/styles/heroSection.css
@@ -159,7 +159,7 @@
     font-weight: 600;
     letter-spacing: 1px;
     text-transform: uppercase;
-    background: linear-gradient(172deg, #06C412 14.08%, #CBFF01 47.44%, #EC6D33 76.2%, #CA3D2D 99.99%);
+    background: linear-gradient(129deg, #06C412 14.08%, #CBFF01 47.44%, #EC6D33 76.2%, #CA3D2D 99.99%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     margin-top: 12px;
